--- a/Modules/Setting/composer.json
+++ b/Modules/Setting/composer.json
@@ -17,7 +17,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Modules\\Setting\\": "app/",
+            "Modules\\Setting\\": "",
+            "Modules\\Setting\\App\\": "app/",
             "Modules\\Setting\\Database\\Factories\\": "database/factories/",
             "Modules\\Setting\\Database\\Seeders\\": "database/seeders/"
         }
